--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
-    "express": "4.21.2",
+    "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.13.0",
-    "zod": "3.24.2"
+    "mysql2": "^3.14.0",
+    "zod": "^3.24.2"
   }
 }
